--- a/sbom_generation.yaml
+++ b/sbom_generation.yaml
@@ -24,6 +24,7 @@ steps:
       npm install cheerio@v1.0.0-rc.12
       yum -y install oracle-softwarecollection-release-el7
       yum -y install devtoolset-9
+      pip install cmake --upgrade
   - type: Command
     name: "Download the version 10.10.0 of cdxgen globally"
     command: |
