update output artifacts

--- a/sbom_generation.yaml
+++ b/sbom_generation.yaml
@@ -47,4 +47,4 @@ steps:
 outputArtifacts:
   - name: artifactSBOM
     type: BINARY
-    location: ${OCI_PRIMARY_SOURCE_DIR}/merged-bom.json
+    location: ${OCI_PRIMARY_SOURCE_DIR}/artifactSBOM.json
