--- a/sbom_generation.yaml
+++ b/sbom_generation.yaml
@@ -14,6 +14,7 @@ steps:
     name: "Download the version 10.10.0 of cdxgen globally"
     command: |
       npm install -g @cyclonedx/cdxgen@10.10.0
+      gcc --version
   - type: Command
     name: "Workaround to let cdxgen run on nodejs 16"
     command: |
