update gcc version devtoolset 10

--- a/sbom_generation.yaml
+++ b/sbom_generation.yaml
@@ -34,7 +34,8 @@ steps:
     name: "Generate SBOM for Python "
     command: |
       cd hiq
-      scl enable devtoolset-10 bash
+      scl enable devtoolset-10 -- bash
+      source /opt/rh/devtoolset-10/enable
       gcc --version
       pip install --no-build-isolation git+https://github.com/juncongmoo/itree.git 
       cmake --version
