update pip to the latest supported version

--- a/sbom_generation.yaml
+++ b/sbom_generation.yaml
@@ -16,7 +16,6 @@ steps:
       npm install -g @cyclonedx/cdxgen@10.10.0
       gcc --version
 
-
   - type: Command
     name: "Workaround to let cdxgen run on nodejs 16"
     command: |
@@ -29,14 +28,17 @@ steps:
       yum -y install devtoolset-10
       yum -y install rh-python38
       pip install cmake --upgrade
+
   - type: Command
     name: "Generate SBOM for Python "
     command: |
       source /opt/rh/devtoolset-10/enable
       source /opt/rh/rh-python38/enable
+      pip install --upgrade pip
       cd hiq
       cdxgen -t python -o artifactSBOM.json --spec-version 1.4 --project-name "hiq" --no-recurse
       mv artifactSBOM.json ${OCI_PRIMARY_SOURCE_DIR}/artifactSBOM.json
+
 outputArtifacts:
   - name: artifactSBOM
     type: BINARY
