--- a/sbom_generation.yaml
+++ b/sbom_generation.yaml
@@ -29,7 +29,7 @@ steps:
       yum -y install rh-python38
       pip install cmake --upgrade
       curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-      python get-pip.py --force-reinstall
+      python3 get-pip.py --force-reinstall
 #pip install --upgrade pip
 
   - type: Command
@@ -37,7 +37,7 @@ steps:
     command: |
       source /opt/rh/devtoolset-10/enable
       source /opt/rh/rh-python38/enable
-      python -v
+      python3 -v
       pip -v 
       cd hiq
       cdxgen -t python -o artifactSBOM.json --spec-version 1.4 --project-name "hiq" --no-recurse
