--- a/sbom_generation.yaml
+++ b/sbom_generation.yaml
@@ -38,7 +38,7 @@ steps:
       source /opt/rh/devtoolset-10/enable
       source /opt/rh/rh-python38/enable
       python3 -v
-      pip -v 
+      pip --version 
       cd hiq
       cdxgen -t python -o artifactSBOM.json --spec-version 1.4 --project-name "hiq" --no-recurse
       mv artifactSBOM.json ${OCI_PRIMARY_SOURCE_DIR}/artifactSBOM.json
