--- a/sbom_generation.yaml
+++ b/sbom_generation.yaml
@@ -40,7 +40,7 @@ steps:
       python3 -v
       pip --version 
       cd hiq
-      cdxgen -t python -o artifactSBOM.json --spec-version 1.4 --project-name "hiq" --no-recurse
+      cdxgen -t python38 -o artifactSBOM.json --spec-version 1.4 --project-name "hiq" --no-recurse
       mv artifactSBOM.json ${OCI_PRIMARY_SOURCE_DIR}/artifactSBOM.json
 
 outputArtifacts:
